# raspi-observer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  prometheus.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  default_pullrequest.yml  default_push.yml  release.yaml
deployments/raspi-observer/: Dockerfile
src/: config.rs  handlers.rs  lib.rs  main.rs  services.rs
src/handlers/: health.rs  metrics.rs
src/services/: docker.rs  metrics.rs  node.rs  raspi.rs
