[package]
name = "raspi-observer"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
prometheus = { version = "0.14", features = ["process"] }
rocket = { version = "0.5", features = ["json"] }
bollard = "0.20.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
libc = "0.2.183"
